--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 name: Publish Extension
 
 on:
@@ -27,7 +28,9 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Publish to VS Code Marketplace
-        run: pnpm vsce publish --no-dependencies --pat ${{ secrets.VSCE_PAT }}
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+        run: pnpm vsce publish --no-dependencies --pat $VSCE_PAT
 
   publish-open-vsx:
     runs-on: ubuntu-latest
@@ -50,4 +53,6 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Publish to Open VSX Marketplace
-        run: pnpm ovsx publish --pat ${{ secrets.OVSX_PAT }}
+        env:
+          OVSX_PAT: ${{ secrets.OVSX_PAT }}
+        run: pnpm ovsx publish --pat $OVSX_PAT
