--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reposcribe",
   "displayName": "RepoScribe",
   "description": "Automatically generates and maintains a single Markdown file snapshot of your project's source code, perfect for LLM context, documentation, or code reviews.",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "publisher": "vipin-tom-varghese",
   "license": "MIT",
   "repository": {
@@ -66,10 +66,12 @@
     "@types/vscode": "^1.103.0",
     "@vscode/test-cli": "^0.0.11",
     "@vscode/test-electron": "^2.5.2",
+    "@vscode/vsce": "^3.6.0",
     "esbuild": "^0.25.8",
     "eslint": "^9.32.0",
     "generator-code": "^1.11.11",
     "npm-run-all": "^4.1.5",
+    "ovsx": "^0.10.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
     "yo": "^5.1.0"
