--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reposcribe",
   "displayName": "RepoScribe",
   "description": "Automatically generates and maintains a single Markdown file snapshot of your project's source code, perfect for LLM context, documentation, or code reviews.",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "publisher": "vipin-tom-varghese",
   "license": "MIT",
   "repository": {
@@ -19,7 +19,7 @@
     "Snippets"
   ],
   "activationEvents": [
-    "onStartupFinished"
+    "*"
   ],
   "main": "./dist/extension.js",
   "contributes": {
@@ -69,6 +69,7 @@
     "generator-code": "^1.11.11",
     "npm-run-all": "^4.1.5",
     "ovsx": "^0.10.5",
+    "source-map-explorer": "^2.5.3",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
     "yo": "^5.1.0"
